[ITB-594, ITB-677] Corrected test suite resource reference and support for imported docs.